Add Jasmin Translation for super class, imports and static method calls